Adding colors and click events

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="app_names">
+        <item>Leave blank</item>
         <item>SPOTIFY STREAMER</item>
         <item>SCORES APP</item>
         <item>LIBRARY APP</item>
         <item>BUILD IT BIGGER</item>
         <item>XYZ READER</item>
-        <item>CAPSTONE: MY OWN APP</item>
-        <item>CAPSTONE: MY OWN APP</item>
-        <item>CAPSTONE: MY OWN APP</item>
-        <item>CAPSTONE: MY OWN APP</item>
-        <item>CAPSTONE: MY OWN APP</item>
-        <item>CAPSTONE: MY OWN APP</item>
         <item>CAPSTONE: MY OWN APP</item>
     </string-array>
 </resources>
