--- a/app/src/main/res/layout/item_apps.xml
+++ b/app/src/main/res/layout/item_apps.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="300dp"
+        android:layout_width="@dimen/cardViewWidth"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_margin="8dp"
@@ -13,6 +13,7 @@
         <TextView
             android:id="@+id/appItem"
             android:layout_width="match_parent"
+            android:background="@color/colorAccent"
             android:layout_height="?attr/listPreferredItemHeight"
             android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
